packages/xdga_directories/src/xdga_directories.h

/*
 * Copyright (c) 2023. Open Mobile Platform LLC.
 * License: Proprietary.
 */
#ifdef __cplusplus
extern "C" {
#endif

char *getCacheLocation();

char *getAppDataLocation();

char *getDocumentsLocation();

char *getDownloadLocation();

char *getMusicLocation();

char *getPicturesLocation();

char *getGenericDataLocation();

char *getMoviesLocation();

#ifdef __cplusplus
}
#endif