packages/xdga_directories/lib/xdga_directories_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
import 'dart:ffi' as ffi;

/// Bindings for `src/xdga_directories.h`.
///
/// Regenerate bindings with `flutter pub run ffigen --config ffigen.yaml`.
///
class XdgaDirectoriesBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  XdgaDirectoriesBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  XdgaDirectoriesBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  ffi.Pointer<ffi.Char> getCacheLocation() {
    return _getCacheLocation();
  }

  late final _getCacheLocationPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
          'getCacheLocation');
  late final _getCacheLocation =
      _getCacheLocationPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  ffi.Pointer<ffi.Char> getAppDataLocation() {
    return _getAppDataLocation();
  }

  late final _getAppDataLocationPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
          'getAppDataLocation');
  late final _getAppDataLocation =
      _getAppDataLocationPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  ffi.Pointer<ffi.Char> getDocumentsLocation() {
    return _getDocumentsLocation();
  }

  late final _getDocumentsLocationPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
          'getDocumentsLocation');
  late final _getDocumentsLocation =
      _getDocumentsLocationPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  ffi.Pointer<ffi.Char> getDownloadLocation() {
    return _getDownloadLocation();
  }

  late final _getDownloadLocationPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
          'getDownloadLocation');
  late final _getDownloadLocation =
      _getDownloadLocationPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  ffi.Pointer<ffi.Char> getMusicLocation() {
    return _getMusicLocation();
  }

  late final _getMusicLocationPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
          'getMusicLocation');
  late final _getMusicLocation =
      _getMusicLocationPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  ffi.Pointer<ffi.Char> getPicturesLocation() {
    return _getPicturesLocation();
  }

  late final _getPicturesLocationPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
          'getPicturesLocation');
  late final _getPicturesLocation =
      _getPicturesLocationPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  ffi.Pointer<ffi.Char> getGenericDataLocation() {
    return _getGenericDataLocation();
  }

  late final _getGenericDataLocationPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
          'getGenericDataLocation');
  late final _getGenericDataLocation =
      _getGenericDataLocationPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  ffi.Pointer<ffi.Char> getMoviesLocation() {
    return _getMoviesLocation();
  }

  late final _getMoviesLocationPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
          'getMoviesLocation');
  late final _getMoviesLocation =
      _getMoviesLocationPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();
}
